--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="template">
     <p class="header"><span>Unity WebGL Player | </span>New Unity Project830</p>
     <div class="template-wrap clear">
-      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
+      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="720px" width="1280px"></canvas>
       <br>
       <div class="logo"></div>
       <div class="fullscreen"><img src="TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
@@ -23,9 +23,9 @@
     TOTAL_MEMORY: 268435456,
     errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
     compatibilitycheck: null,
-    dataUrl: "Release/AnimaUiTest.data",
-    codeUrl: "Release/AnimaUiTest.js",
-    memUrl: "Release/AnimaUiTest.mem",
+    dataUrl: "Release/ReadyForPush.data",
+    codeUrl: "Release/ReadyForPush.js",
+    memUrl: "Release/ReadyForPush.mem",
     
   };
 </script>
